--- a/TechJobsMVC/Views/List/Jobs.cshtml
+++ b/TechJobsMVC/Views/List/Jobs.cshtml
@@ -3,8 +3,63 @@
     <h1>@ViewBag.title</h1>
 
     @{
-        //TODO #1: Use a loop to display job results in a table.
+//TODO #1: Use a loop to display job results in a table.
     }
 
-
+    @foreach (var entry in ViewBag.jobs)
+     {
+        <table class="centeredTable" border="1">
+            <tbody>
+                <tr>
+                    <td>
+                        <span>ID: </span>
+                    </td>
+                    <td>
+                        <span>@entry.Id</span>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <span>Name: </span>
+                    </td>
+                    <td>
+                        <span>@entry.Name</span>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <span>Employer: </span>
+                    </td>
+                    <td>
+                        <span>@entry.Employer</span>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <span>Location: </span>
+                    </td>
+                    <td>
+                        <span>@entry.Location</span>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <span>Position Type: </span>
+                    </td>
+                    <td>
+                        <span>@entry.PositionType</span>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <span>Skill: </span>
+                    </td>
+                    <td>
+                        <span>@entry.CoreCompetency</span>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <br />
+     }
 </div>
