Added view all link

--- a/TechJobsMVC/Views/List/Jobs.cshtml
+++ b/TechJobsMVC/Views/List/Jobs.cshtml
@@ -8,7 +8,7 @@
 
     @foreach (var entry in ViewBag.jobs)
      {
-        <table class="centeredTable" border="1">
+        <table class="centeredTable job-listing">
             <tbody>
                 <tr>
                     <td>
