--- a/TechJobsMVC/Views/List/Index.cshtml
+++ b/TechJobsMVC/Views/List/Index.cshtml
@@ -14,8 +14,15 @@
         @{
             //TODO #2: Complete the View Jobs By Category Table
         }
+        <td>
+            <ul>
+                <li>
+                    <a asp-controller="List" asp-action="Jobs" asp-route-column="@ViewBag.columns["all"]" asp-route-value="@ViewBag.columns["all"]">All Jobs</a>
+                </li>
+            </ul>
+        </td> @* Feel free to remove or modify this element if necessary. *@
 
-        <td></td> @* Feel free to remove or modify this element if necessary. *@
+
         @foreach (var category in ViewBag.tableChoices)
         {
             <td>
