--- a/TechJobsMVC/Views/Search/Index.cshtml
+++ b/TechJobsMVC/Views/Search/Index.cshtml
@@ -26,8 +26,6 @@
 
     <hr />
 
-    @{
-        //TODO #4: Loop over the search results to display all job fields.
-    }
-
+    @{//TODO #4: Loop over the search results to display all job fields.
+    } 
 </div>
