--- a/TechJobsMVC/Views/Search/Index.cshtml
+++ b/TechJobsMVC/Views/Search/Index.cshtml
@@ -27,5 +27,64 @@
     <hr />
 
     @{//TODO #4: Loop over the search results to display all job fields.
-    } 
+    }
+
+    @if (ViewBag.jobs != null)
+    {
+        @foreach (var entry in ViewBag.jobs)
+        {
+            <table class="centeredTable job-listing">
+                <tbody>
+                    <tr>
+                        <td>
+                            <span>ID: </span>
+                        </td>
+                        <td>
+                            <span>@entry.Id</span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span>Name: </span>
+                        </td>
+                        <td>
+                            <span>@entry.Name</span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span>Employer: </span>
+                        </td>
+                        <td>
+                            <span>@entry.Employer</span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span>Location: </span>
+                        </td>
+                        <td>
+                            <span>@entry.Location</span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span>Position Type: </span>
+                        </td>
+                        <td>
+                            <span>@entry.PositionType</span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span>Skill: </span>
+                        </td>
+                        <td>
+                            <span>@entry.CoreCompetency</span>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        }
+    }
 </div>
